[FIX]4,7index: Delete relative position of places class and overlapping footer

--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -15,4 +15,5 @@ body {
 /* FIX THE OVERLAPPING OF FOOTER WITH ARTICLES */
 html {
     position: relative;
+    min-height: 100%;
 }
