--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,5 +1,4 @@
 .places {
-    position: relative;
     text-align: center;
     margin-bottom: 80px;
 }
